docs-archive/apache-airflow-providers-microsoft-azure/13.4.0/_sources/_api/airflow/providers/microsoft/azure/operators/batch/index.rst.txt
airflow.providers.microsoft.azure.operators.batch
=================================================

.. py:module:: airflow.providers.microsoft.azure.operators.batch


Classes
-------

.. autoapisummary::

   airflow.providers.microsoft.azure.operators.batch.AzureBatchOperator


Module Contents
---------------

.. py:class:: AzureBatchOperator(*, batch_pool_id, batch_pool_vm_size, batch_job_id, batch_task_command_line, batch_task_id, vm_node_agent_sku_id, vm_publisher = None, vm_offer = None, sku_starts_with = None, vm_sku = None, vm_version = None, os_family = None, os_version = None, batch_pool_display_name = None, batch_job_display_name = None, batch_job_manager_task = None, batch_job_preparation_task = None, batch_job_release_task = None, batch_task_display_name = None, batch_task_container_settings = None, batch_start_task = None, batch_max_retries = 3, batch_task_resource_files = None, batch_task_output_files = None, batch_task_user_identity = None, target_low_priority_nodes = None, target_dedicated_nodes = None, enable_auto_scale = False, auto_scale_formula = None, azure_batch_conn_id='azure_batch_default', use_latest_verified_vm_image_and_sku = False, timeout = 25, should_delete_job = False, should_delete_pool = False, poll_interval = 30, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Executes a job on Azure Batch Service.

   :param batch_pool_id: A string that uniquely identifies the Pool within the Account.
   :param batch_pool_vm_size: The size of virtual machines in the Pool
   :param batch_job_id: A string that uniquely identifies the Job within the Account.
   :param batch_task_command_line: The command line of the Task
   :param batch_task_id: A string that uniquely identifies the task within the Job.
   :param batch_pool_display_name: The display name for the Pool.
       The display name need not be unique
   :param batch_job_display_name: The display name for the Job.
       The display name need not be unique
   :param batch_job_manager_task: Details of a Job Manager Task to be launched when the Job is started.
   :param batch_job_preparation_task: The Job Preparation Task. If set, the Batch service will
       run the Job Preparation Task on a Node before starting any Tasks of that
       Job on that Compute Node. Required if batch_job_release_task is set.
   :param batch_job_release_task: The Job Release Task. Use to undo changes to Compute Nodes
       made by the Job Preparation Task
   :param batch_task_display_name:  The display name for the task.
       The display name need not be unique
   :param batch_task_container_settings: The settings for the container under which the Task runs
   :param batch_start_task: A Task specified to run on each Compute Node as it joins the Pool.
       The Task runs when the Compute Node is added to the Pool or
       when the Compute Node is restarted.
   :param batch_max_retries: The number of times to retry this batch operation before it's
       considered a failed operation. Default is 3
   :param batch_task_resource_files: A list of files that the Batch service will
       download to the Compute Node before running the command line.
   :param batch_task_output_files: A list of files that the Batch service will upload
       from the Compute Node after running the command line.
   :param batch_task_user_identity: The user identity under which the Task runs.
       If omitted, the Task runs as a non-administrative user unique to the Task.
   :param target_low_priority_nodes: The desired number of low-priority Compute Nodes in the Pool.
       This property must not be specified if enable_auto_scale is set to true.
   :param target_dedicated_nodes: The desired number of dedicated Compute Nodes in the Pool.
       This property must not be specified if enable_auto_scale is set to true.
   :param enable_auto_scale: Whether the Pool size should automatically adjust over time. Default is false
   :param auto_scale_formula: A formula for the desired number of Compute Nodes in the Pool.
       This property must not be specified if enableAutoScale is set to false.
       It is required if enableAutoScale is set to true.
   :param azure_batch_conn_id: The :ref:`Azure Batch connection id<howto/connection:azure_batch>`
   :param use_latest_verified_vm_image_and_sku: Whether to use the latest verified virtual
       machine image and sku in the batch account. Default is false.
   :param vm_publisher: The publisher of the Azure Virtual Machines Marketplace Image.
       For example, Canonical or MicrosoftWindowsServer. Required if
       use_latest_image_and_sku is set to True
   :param vm_offer: The offer type of the Azure Virtual Machines Marketplace Image.
       For example, UbuntuServer or WindowsServer. Required if
       use_latest_image_and_sku is set to True
   :param sku_starts_with: The starting string of the Virtual Machine SKU. Required if
       use_latest_image_and_sku is set to True
   :param vm_sku: The name of the virtual machine sku to use
   :param vm_version: The version of the virtual machine
   :param vm_version: str | None
   :param vm_node_agent_sku_id: The node agent sku id of the virtual machine
   :param os_family: The Azure Guest OS family to be installed on the virtual machines in the Pool.
   :param os_version: The OS family version
   :param timeout: The amount of time to wait for the job to complete in minutes. Default is 25
   :param should_delete_job: Whether to delete job after execution. Default is False
   :param should_delete_pool: Whether to delete pool after execution of jobs. Default is False
   :param poll_interval: Polling interval in seconds for deferrable mode. Default is 30.
       Determines how frequently the trigger checks task completion status when deferrable=True.
   :param deferrable: Run operator in deferrable mode.



   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('batch_pool_id', 'batch_pool_vm_size', 'batch_job_id', 'batch_task_id', 'batch_task_command_line')



   .. py:attribute:: ui_color
      :value: '#f0f0e4'



   .. py:attribute:: batch_pool_id


   .. py:attribute:: batch_pool_vm_size


   .. py:attribute:: batch_job_id


   .. py:attribute:: batch_task_id


   .. py:attribute:: batch_task_command_line


   .. py:attribute:: batch_pool_display_name
      :value: None



   .. py:attribute:: batch_job_display_name
      :value: None



   .. py:attribute:: batch_job_manager_task
      :value: None



   .. py:attribute:: batch_job_preparation_task
      :value: None



   .. py:attribute:: batch_job_release_task
      :value: None



   .. py:attribute:: batch_task_display_name
      :value: None



   .. py:attribute:: batch_task_container_settings
      :value: None



   .. py:attribute:: batch_start_task
      :value: None



   .. py:attribute:: batch_max_retries
      :value: 3



   .. py:attribute:: batch_task_resource_files
      :value: None



   .. py:attribute:: batch_task_output_files
      :value: None



   .. py:attribute:: batch_task_user_identity
      :value: None



   .. py:attribute:: target_low_priority_nodes
      :value: None



   .. py:attribute:: target_dedicated_nodes
      :value: None



   .. py:attribute:: enable_auto_scale
      :value: False



   .. py:attribute:: auto_scale_formula
      :value: None



   .. py:attribute:: azure_batch_conn_id
      :value: 'azure_batch_default'



   .. py:attribute:: use_latest_image
      :value: False



   .. py:attribute:: vm_publisher
      :value: None



   .. py:attribute:: vm_offer
      :value: None



   .. py:attribute:: sku_starts_with
      :value: None



   .. py:attribute:: vm_sku
      :value: None



   .. py:attribute:: vm_version
      :value: None



   .. py:attribute:: vm_node_agent_sku_id


   .. py:attribute:: os_family
      :value: None



   .. py:attribute:: os_version
      :value: None



   .. py:attribute:: timeout
      :value: 25



   .. py:attribute:: should_delete_job
      :value: False



   .. py:attribute:: should_delete_pool
      :value: False



   .. py:attribute:: poll_interval
      :value: 30



   .. py:attribute:: deferrable


   .. py:property:: hook
      :type: airflow.providers.microsoft.azure.hooks.batch.AzureBatchHook


      Create and return an AzureBatchHook (cached).



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)

      Return immediately - callback for when the trigger fires.

      The trigger communicates the terminal Azure Batch job state
      through the event payload.



   .. py:method:: on_kill()

      Override this method to clean up subprocesses when a task instance gets killed.

      Any use of the threading, subprocess or multiprocessing module within an
      operator needs to be cleaned up, or it will leave ghost processes behind.



   .. py:method:: clean_up(pool_id = None, job_id = None)

      Delete the given pool and job in the batch account.

      :param pool_id: The id of the pool to delete
      :param job_id: The id of the job to delete




